[package]
name = "diameter"
version = "0.3.1"
edition = "2021"
authors = ["Jason Lee<lwlee2608@gmail.com>"]
description = "Rust Implementation of the Diameter Protocol."
license = "MIT"
keywords = ["diameter", "network"]
repository = "https://github.com/lwlee2608/diameter-rs"
documentation = "https://docs.rs/diameter"

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
lazy_static = "1.4"
chrono = "0.4"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"

[dev-dependencies]

[[bench]]
name = "diameter_bench"
path = "benches/diameter_bench.rs"
